k8s/k8s.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --accesslog
            - --entrypoints.http.Address=:80
            - --entrypoints.https.Address=:443
            - --entrypoints.https.http.tls
            - --entryPoints.chal.address=:1337
            - --entrypoints.http.http.redirections.entrypoint.to=https
            - --entrypoints.http.http.redirections.entrypoint.scheme=https
            - --api.insecure
            - --providers.kubernetescrd
            - --providers.kubernetesingress=true
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: dashboard
              containerPort: 8080
            - name: chal
              containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-secure-service
  namespace: traefik

spec:
  type: LoadBalancer
  ports:
    - targetPort: https
      name: https
      port: 443
    - targetPort: http
      name: http
      port: 80
    - targetPort: chal
      name: chal
      port: 1337
    - targetPort: dashboard
      name: dashboard
      port: 8080
  selector:
    app: traefik
---
apiVersion: v1
kind: Namespace
metadata:
  name: klodd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klodd
  namespace: klodd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: klodd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: klodd
    spec:
      serviceAccountName: klodd # 
      volumes:
        - name: config
          secret:
            secretName: klodd
      containers:
        - name: klodd
          image: ghcr.io/tjcsec/klodd:master # 
          volumeMounts:
            - name: config
              mountPath: /app/config/
              readOnly: true
          ports:
            - name: public
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: klodd
  namespace: klodd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: klodd
  ports:
    - name: public
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klodd
  namespace: klodd
spec:
  rules:
    - host: klodd.ctf.ingeniums.club #change this eventually to your public domain
      http:
        paths:
          - backend:
              service:
                name: klodd
                port:
                  number: 5000
            path: /
            pathType: ImplementationSpecific
